Modify Dataset Class Details Output

--- a/model/convert-voc-to-yolo.ipynb
+++ b/model/convert-voc-to-yolo.ipynb
@@ -13,13 +13,13 @@
     "This notebook should\n",
     "- Create `model/dataset` directory with all images and labels of QMUL-OpenLogo in yolo format\n",
     "- Contain 27,083 images and 352 logo classes\n",
-    "- Create `classes.txt` and `class-id-map.txt`\n",
+    "- Create `details/class-list.txt` and `details/class-id-map.txt`\n",
     "- Delete leftover `model/openlogo` directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
     "\n",
     "    # Sort classes and save .txt\n",
     "    class_name_list.sort()\n",
-    "    print('\\n'.join(class_name_list), file=open('classes.txt', 'w'))\n",
+    "    print(class_name_list, file=open('details/class-list.txt', 'w'))\n",
     "\n",
     "    class_name_id_map = {}\n",
     "    i = 0\n",
@@ -105,14 +105,14 @@
     "        i += 1\n",
     "\n",
     "    # Save map in .txt\n",
-    "    print(class_name_id_map, file=open('class-id-map.txt', 'w'))\n",
+    "    print(class_name_id_map, file=open('details/class-id-map.txt', 'w'))\n",
     "\n",
     "    return class_name_id_map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
