Fix Dataset Split File Repeats

--- a/model/convert-voc-to-yolo.ipynb
+++ b/model/convert-voc-to-yolo.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,8 +81,8 @@
     "    class_name_list = []\n",
     "\n",
     "    # Iterate through set annotations\n",
-    "    for filename in os.listdir('openlogo/annotations'):\n",
-    "        xml_file = os.path.join('openlogo/annotations', filename)\n",
+    "    for file in os.listdir('openlogo/annotations'):\n",
+    "        xml_file = os.path.join('openlogo/annotations', file)\n",
     "        root = et.parse(xml_file).getroot()\n",
     "\n",
     "        # Add to class to list if needed\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,43 +136,48 @@
     "        print_objects.append('{} {:.6f} {:.6f} {:.6f} {:.6f}'.format(class_id, bnbox_x_center, bnbox_y_center, bnbox_width, bnbox_height))\n",
     "\n",
     "    # Save formatted annotation to .txt\n",
-    "    save_filename = os.path.join('dataset', os.path.splitext(annotation_dict['filename'])[0] + '.txt')\n",
+    "    save_filename = os.path.join('dataset/labels', os.path.splitext(annotation_dict['filename'])[0] + '.txt')\n",
     "    print('\\n'.join(print_objects), file=open(save_filename, 'w'))\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read through class folder and move files\n",
     "def split_to_folders():\n",
     "\n",
+    "     # Remove excess class files\n",
+    "     excess_files = ['all_train.txt', 'all_test.txt', 'train.txt', 'test.txt']\n",
+    "     for file in excess_files:\n",
+    "          os.remove(os.path.join('openlogo/ImageSets/class_sep', file))\n",
+    "\n",
     "     # Iterate through every class file\n",
-    "     for filename in os.listdir('openlogo/ImageSets/class_sep'):\n",
+    "     for file in os.listdir('openlogo/ImageSets/class_sep'):\n",
     "          \n",
     "          # Get IDs from file\n",
-    "          split = os.path.join('openlogo/ImageSets/class_sep', filename)\n",
+    "          split = os.path.join('openlogo/ImageSets/class_sep', file)\n",
     "          split_ids = open(split, 'r').read().split('\\n')\n",
     "          split_ids.pop()\n",
-    "          split_type = filename.split(\"_\")[-1]\n",
+    "          split_type = file.split(\"_\")[-1]\n",
     "\n",
     "          # Iterate through ID if test file\n",
     "          if split_type == 'test.txt':\n",
     "               for id in split_ids:\n",
-    "                    txt_file = os.path.join('dataset/' + id + '.txt')\n",
+    "                    txt_file = os.path.join('dataset/labels', id + '.txt')\n",
     "                    jpg_file = os.path.join('openlogo/JPEGImages', id + '.jpg')\n",
     "                    \n",
     "                    shutil.move(txt_file, 'dataset/labels/test')\n",
-    "                    shutil.move(jpg_file, 'dataset/image/test')\n",
+    "                    shutil.move(jpg_file, 'dataset/images/test')\n",
     "          \n",
     "          # Iterate through ID if train file\n",
     "          elif split_type == 'train.txt':\n",
     "               i = 0\n",
     "               for id in split_ids:\n",
-    "                    txt_file = os.path.join('dataset/' + id + '.txt')\n",
+    "                    txt_file = os.path.join('dataset/labels', id + '.txt')\n",
     "                    jpg_file = os.path.join('openlogo/JPEGImages', id + '.jpg')\n",
     "                    \n",
     "                    # Split 1/7 of test data into val set\n",
@@ -189,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,35 +225,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate yolo labels from each XML\n",
-    "for filename in os.listdir('openlogo/annotations'):\n",
-    "    data = extract_from_xml(os.path.join('openlogo/annotations', filename))\n",
-    "    export_for_yolo(class_names_id_map, data)"
+    "for file in os.listdir('openlogo/annotations'):\n",
+    "    annotation_data = extract_from_xml(os.path.join('openlogo/annotations', file))\n",
+    "    export_for_yolo(class_names_id_map, annotation_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Move labels and images into split directories\n",
+    "# Split dataset into train/val/test\n",
     "split_to_folders()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# DESTRUCTIVE!\n",
     "# Remove leftover openlogo files\n",
-    "# shutil.rmtree('openlogo')\n",
+    "shutil.rmtree('openlogo')\n",
+    "\n",
+    "# Remove dataset for reset\n",
     "# shutil.rmtree('dataset')"
    ]
   }
