Update Final Dataset Directory

--- a/model/convert-voc-to-yolo.ipynb
+++ b/model/convert-voc-to-yolo.ipynb
@@ -12,14 +12,13 @@
     "- Create `/datasets/openlogo` with\n",
     "    - yolo labels (.txt) in `/labels`\n",
     "    - images (.jpg) in `/images`\n",
-    "    - classes and class splits (.txt) in `/details`\n",
-    "    - train/val/test split (.txt)\n",
+    "    - classes and split (.txt) in `/details`\n",
     "- Delete leftover files from download"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,30 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading...\n",
-      "From: https://drive.google.com/uc?id=1p1BWofDJOKXqCtO0JPT5VyuIPOsuxOuj\n",
-      "To: c:\\Users\\Hang\\source\\repos\\SmartSee\\model\\openlogo.tar\n",
-      "100%|██████████| 4.71G/4.71G [03:12<00:00, 24.5MB/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'openlogo.tar'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Download openlogo.tar\n",
     "gdown.download(id='1p1BWofDJOKXqCtO0JPT5VyuIPOsuxOuj', output='openlogo.tar', quiet=False)"
@@ -64,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,12 +64,18 @@
     "\n",
     "os.mkdir('datasets/openlogo/images')\n",
     "os.mkdir('datasets/openlogo/labels')\n",
-    "os.mkdir('datasets/openlogo/details')"
+    "os.mkdir('datasets/openlogo/details')\n",
+    "\n",
+    "os.mkdir('datasets/openlogo/images/train')\n",
+    "os.mkdir('datasets/openlogo/images/test')\n",
+    "\n",
+    "os.mkdir('datasets/openlogo/labels/train')\n",
+    "os.mkdir('datasets/openlogo/labels/test')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,14 +101,19 @@
     "for i in range(len(class_names)):\n",
     "    class_name_id_map[class_names[i]] = i\n",
     "\n",
-    "# Save list and map in .txt\n",
-    "print(class_names, file=open('datasets/openlogo/details/class-list.txt', 'w'))\n",
-    "print(class_name_id_map, file=open('datasets/openlogo/details/class-id-map.txt', 'w'))"
+    "# Save list in .txt\n",
+    "print('\\n'.join(class_names), file=open('datasets/openlogo/details/class-list.txt', 'w'))\n",
+    "\n",
+    "# Save map in .txt\n",
+    "formatted_map = []\n",
+    "for i in range(len(class_names)):\n",
+    "    formatted_map.append('{}: {}'.format(i, class_names[i]))\n",
+    "print('\\n'.join(formatted_map), file=open('datasets/openlogo/details/class-id-map.txt', 'w'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,19 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Move images\n",
-    "for filename in os.listdir('openlogo/JPEGImages',):\n",
-    "    jpg_file = os.path.join('openlogo/JPEGImages', filename)\n",
-    "    shutil.move(jpg_file, 'datasets/openlogo/images')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +194,6 @@
     "\n",
     "# Initialize lists to hold dataset split\n",
     "train_ids = []\n",
-    "val_ids = []\n",
     "test_ids = []\n",
     "\n",
     "# Iterate through every class file\n",
@@ -231,47 +207,60 @@
     "    # Get split type\n",
     "    split_type = filename.split(\"_\")[-1]\n",
     "\n",
-    "    # Iterate through ID if test\n",
-    "    if split_type == 'test.txt':\n",
-    "\n",
-    "        # Add each id to test split\n",
+    "    # Add IDs to corresponding split\n",
+    "    if split_type == 'train.txt':\n",
     "        for id in split_ids:\n",
-    "            jpg_file = os.path.join('./labels', id + '.jpg')\n",
-    "            test_ids.append(jpg_file)\n",
-    "    \n",
-    "    # Iterate through ID if train\n",
-    "    elif split_type == 'train.txt':\n",
-    "        for i in range(len(split_ids)):\n",
-    "            jpg_file = os.path.join('./labels', split_ids[i] + '.jpg')\n",
-    "            \n",
-    "            # Add 1/7 of test data to val split\n",
-    "            if i < math.ceil(len(split_ids) / 7):\n",
-    "                val_ids.append(jpg_file)\n",
-    "            \n",
-    "            # Add rest to train split\n",
-    "            else:\n",
-    "                train_ids.append(jpg_file)\n",
+    "            train_ids.append(id)\n",
+    "\n",
+    "    elif split_type == 'test.txt':\n",
+    "        for id in split_ids:\n",
+    "            test_ids.append(id)\n",
     "\n",
     "# Create .txts\n",
-    "print('\\n'.join(train_ids), file=open('datasets/openlogo/train.txt', 'w'))\n",
-    "print('\\n'.join(val_ids), file=open('datasets/openlogo/val.txt', 'w'))\n",
-    "print('\\n'.join(test_ids), file=open('datasets/openlogo/test.txt', 'w'))"
+    "print('\\n'.join(train_ids), file=open('datasets/openlogo/details/train-ids.txt', 'w'))\n",
+    "print('\\n'.join(test_ids), file=open('datasets/openlogo/details/test-ids.txt', 'w'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Move images and labels to corresponding folder\n",
+    "for id in train_ids:\n",
+    "    txt_file = os.path.join('datasets/openlogo/labels', id + '.txt')\n",
+    "    jpg_file = os.path.join('openlogo/JPEGImages', id + '.jpg')\n",
+    "    shutil.move(txt_file, 'datasets/openlogo/labels/train')\n",
+    "    shutil.move(jpg_file, 'datasets/openlogo/images/train')\n",
+    "\n",
+    "for id in test_ids:\n",
+    "    txt_file = os.path.join('datasets/openlogo/labels', id + '.txt')\n",
+    "    jpg_file = os.path.join('openlogo/JPEGImages', id + '.jpg')\n",
+    "    shutil.move(txt_file, 'datasets/openlogo/labels/test')\n",
+    "    shutil.move(jpg_file, 'datasets/openlogo/images/test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# DESTRUCTIVE: Cleanup\n",
     "# Move class split files\n",
     "shutil.move('openlogo/ImageSets/class_sep', 'datasets/openlogo/details')\n",
-    "os.rename('datasets/openlogo/details/class_sep', 'datasets/openlogo/details/class-sep')\n",
     "\n",
     "# Remove leftover openlogo files\n",
-    "shutil.rmtree('openlogo')\n",
-    "\n",
+    "shutil.rmtree('openlogo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Remove dataset for reset\n",
     "# shutil.rmtree('datasets')"
    ]
