--- a/model/prepare-dataset.ipynb
+++ b/model/prepare-dataset.ipynb
@@ -247,6 +247,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create openlogo.yaml\n",
+    "yaml = '''path: ../datasets/openlogo\n",
+    "train: images/train\n",
+    "val: images/test\n",
+    "test:\n",
+    "\n",
+    "names:'''\n",
+    "\n",
+    "class_id_file = 'datasets/openlogo/details/class-id-map.txt'\n",
+    "class_ids = open(class_id_file, 'r').read().split('\\n')\n",
+    "class_ids.pop()\n",
+    "\n",
+    "for class_id in class_ids:\n",
+    "    yaml += '\\n  {}'.format(class_id)\n",
+    "\n",
+    "print(yaml, file=open('yolov5/data/openlogo.yaml', 'w'))\n",
+    "\n",
+    "# TO TRAIN: python train.py --data openlogo.yaml --weights yolov5s.pt --img 640 --batch-size 32 --epochs 100\n",
+    "# TO RESUME: python train.py --resume"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# DESTRUCTIVE: Cleanup\n",
     "# Move class split files\n",
     "shutil.move('openlogo/ImageSets/class_sep', 'datasets/openlogo/details')\n",
@@ -268,7 +295,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cs231n",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -282,12 +309,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ce1e2dc1913f4067280215715469665255d604b1ffc918ef8c9d65aee97a3e85"
+    "hash": "74d000f1ff3c268724346f0c94a1e049e0d21134fbe9e5343fb48096b69fc59e"
    }
   }
  },
