--- a/model/prepare-dataset.ipynb
+++ b/model/prepare-dataset.ipynb
@@ -283,7 +283,7 @@
     "\n",
     "print(yaml, file=open('yolov5/data/openlogo.yaml', 'w'))\n",
     "\n",
-    "# TO TRAIN: python train.py --data openlogo.yaml --weights yolov5s.pt --img 640 --batch-size 32 --epochs 100\n",
+    "# TO TRAIN: python train.py --data openlogo.yaml --weights yolov5s.pt --img 640 --batch-size 32 --epochs 300 --name logo-det\n",
     "# TO RESUME: python train.py --resume"
    ]
   },
