--- a/model/prepare-dataset.ipynb
+++ b/model/prepare-dataset.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -18,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +87,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -193,7 +191,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -253,7 +250,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -262,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,14 +277,13 @@
     "for class_id in class_ids:\n",
     "    yaml += '\\n  {}'.format(class_id)\n",
     "\n",
-    "print(yaml, file=open('yolov5/data/openlogo.yaml', 'w'))\n",
+    "print(yaml, file=open('openlogo.yaml', 'w'))\n",
     "\n",
-    "# TO TRAIN: python train.py --data openlogo.yaml --weights yolov5s.pt --img 640 --batch-size 32 --epochs 300 --name logo-det\n",
+    "# TO TRAIN: python train.py --data ../openlogo.yaml --hyp ../hyp.openlogo.yaml --weights yolov5s.pt --img 640 --batch-size 32 --epochs 150 --name logo-det --save-period 50\n",
     "# TO RESUME: python train.py --resume"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -308,7 +303,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cs231n",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -322,9 +317,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.10.9"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "ce1e2dc1913f4067280215715469665255d604b1ffc918ef8c9d65aee97a3e85"
